[tool.poetry]
name = "build-sqli-url"
version = "0.1.0"
description = "Build SQLi URL Helper."
authors = ["Sergey M <tz4678@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
build-sqli-url = "build_sqli_url:main"
